--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "neon-cli": "^0.3.1"
   },
   "scripts": {
-    "install": "neon build"
+    "install": "neon build --release"
   },
   "devDependencies": {}
 }
