Added Rust and Node matrix multiplication

--- a/src/example-rust-azure-function/package.json
+++ b/src/example-rust-azure-function/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "mathjs": "^6.2.3",
     "rust-npm": "file:../rust-npm/pkg"
   },
   "scripts": {},
