--- a/src/rust-npm/Cargo.toml
+++ b/src/rust-npm/Cargo.toml
@@ -25,6 +25,10 @@ console_error_panic_hook = { version = "0.1.1", optional = true }
 #
 # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.2", optional = true }
+ndarray = { version = "0.13.0", features = ["serde-1"] }
+serde = "1.0.101"
+serde_json = "1.0.41"
+serde_derive = "1.0.101"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.2"
